--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -56,8 +56,7 @@
 		</div>
 
 	</nav>
-	<a href="tel:+61434653406"
-		class="fixed-button whatsapp-button">
+	<a href="tel:+61434653406" class="fixed-button whatsapp-button">
 		<i class="bi bi-telephone-fill"></i>
 	</a>
 	<div class="hero">
@@ -66,7 +65,8 @@
 				<div class="col-lg-5">
 					<div class="intro-excerpt">
 						<h1>Best removalist in Adelaide<span clsas="d-block"></span></h1>
-						<p style="color: #fff;" class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
+						<p style="color: #fff;" class="mb-4">Where Experience Meets Excellence in Relocation Solutions!
+						</p>
 						<p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a
 								target="_blank" href="tel:+61434653406" class="btn btn-white-outline">Call Us Now</a>
 						</p>
@@ -206,9 +206,9 @@
 							<div class="service-logos">
 								<img src="{% static 'images/person.png' %}" alt="Logo 1" class="service-logo">
 							</div>
-							
+
 							<div class="service-price-info">
-								
+
 								<strong>$99 </strong><span>per hour</span>
 							</div>
 							<div class="service-body">
@@ -217,9 +217,9 @@
 								<p>2X Movers</p>
 								<p>Fully Insured</p>
 								<p>Scratch Proof Wrapping</p>
-								<p>Special care for expensive and fragile items	</p>
-								<p>Assistance with Assembly and  Disassembly</p>
-							</div> 
+								<p>Special care for expensive and fragile items </p>
+								<p>Assistance with Assembly and Disassembly</p>
+							</div>
 							<div class="service-footer">
 								<a href="{% url 'contact' %}" class="btn-book-now">Book Now</a>
 							</div>
@@ -233,7 +233,7 @@
 								<img src="{% static 'images/person.png' %}" alt="Logo 1" class="service-logo">
 								<img src="{% static 'images/person.png' %}" alt="Logo 2" class="service-logo">
 							</div>
-							
+
 							<div class="service-price-info">
 								<strong>$110 </strong><span>per hour</span>
 							</div>
@@ -243,8 +243,8 @@
 								<p>2X Movers</p>
 								<p>Fully Insured</p>
 								<p>Scratch Proof Wrapping</p>
-								<p>Special care for expensive and fragile items	</p>
-								<p>Assistance with Assembly and  Disassembly</p>
+								<p>Special care for expensive and fragile items </p>
+								<p>Assistance with Assembly and Disassembly</p>
 							</div>
 							<div class="service-footer">
 								<a href="{% url 'contact' %}" class="btn-book-now">Book Now</a>
@@ -264,9 +264,9 @@
 								<img src="{% static 'images/person.png' %}" alt="Logo 2" class="service-logo">
 
 							</div>
-							
+
 							<div class="service-price-info">
-								
+
 								<strong>$169 </strong><span>per hour</span>
 							</div>
 							<div class="service-body">
@@ -275,8 +275,8 @@
 								<p>2X Movers</p>
 								<p>Fully Insured</p>
 								<p>Scratch Proof Wrapping</p>
-								<p>Special care for expensive and fragile items	</p>
-								<p>Assistance with Assembly and  Disassembly</p>
+								<p>Special care for expensive and fragile items </p>
+								<p>Assistance with Assembly and Disassembly</p>
 							</div>
 							<div class="service-footer">
 								<a href="{% url 'contact' %}" class="btn-book-now">Book Now</a>
@@ -755,14 +755,16 @@
 						</p>
 					</div>
 
-					<div class="col-lg-6 text-center text-lg-end">
+					<footer>
 						<ul class="list-unstyled d-inline-flex ms-auto">
-							<li class="me-4"><a href="{% url 'terms' %}">Terms &amp; Conditions</a></li>
-							<li><a href="{% url 'privacy' %}">Privacy Policy </a></li><br>
-							<a href="https://mandeep.pythonanywhere.com/" class="text-muted m-3">Developer © 2024</a>
-
+							<li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
+							<li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
 						</ul>
-					</div>
+						<a href="https://mandeep.pythonanywhere.com/" class="text-muted m-3">Developer © 2024</a>
+					</footer>
+
+
+
 
 				</div>
 			</div>
