--- a/ogapp/templates/privacy.html
+++ b/ogapp/templates/privacy.html
@@ -120,5 +120,93 @@
             terms.</p>
 
     </body>
+    <footer class="footer-section">
+		<div class="container relative">
+
+			<div class="row">
+				<div class="col-lg-8">
+
+				</div>
+			</div>
+			<div class="row g-5 mb-5">
+				<div class="col-lg-4">
+
+					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Elevating Relocation Experiences
+							with Expertise and Care!<span>.</span></a></div>
+					<p class="mb-4">At OG Movers, we are dedicated to making your move as smooth and stress-free as
+						possible. With years of experience in the moving industry, we pride ourselves on reliability,
+						professionalism, and exceptional customer service. Whether you're moving across town or across
+						the country, our team of skilled movers is committed to handling your belongings with care and
+						ensuring a seamless transition to your new home or office. From packing and transportation to
+						unpacking and setup, we offer a full range of moving services tailored to meet your unique
+						needs. Trust OG Movers to deliver quality service and peace of mind for your next move..</p>
+
+					<ul class="list-unstyled custom-social">
+						<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+						<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
+						<li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
+									class="fa fa-brands fa-instagram"></span></a></li>
+						<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
+					</ul>
+				</div>
+
+				<div class="col-lg-8">
+					<div class="row links-wrap">
+						<div class="col-6 col-sm-6 col-md-3">
+							<ul class="list-unstyled">
+								<li><a href="#">About us</a></li>
+								<li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
+								<li><a href="{% url 'contact' %}">Contact us</a></li>
+								<li><iframe
+										src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin"
+										width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+										referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+								<!--<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
+								</li>
+							</ul>
+						</div>
+
+
+
+
+					</div>
+				</div>
+
+			</div>
+
+			<div class="border-top copyright">
+				<div class="row pt-4">
+					<div class="col-lg-6">
+						<p class="mb-2 text-center text-lg-start">Copyright &copy;
+							<script>document.write(new Date().getFullYear());</script>. OG Movers. &mdash;
+							<!-- License information: https://untree.co/license/ -->
+						</p>
+					</div>
+
+					<footer>
+						<ul class="list-unstyled d-inline-flex ms-auto">
+							<li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
+							<li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
+						</ul>
+						<a href="https://mandeep.pythonanywhere.com/" class="text-muted m-3">Developer © 2024</a>
+					</footer>
+
+
+
+
+				</div>
+			</div>
+
+		</div>
+	</footer>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'AW-16485596543');
+	</script>
+
 
 </html>
