--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+	<!-- Add this script just before </body> -->
+	
+
 	<style>
 		.container-3d {
 			border: 3px solid #000;
@@ -697,35 +700,34 @@
 
 
 
-	<div class="container">
-		<div id="carouselExample" class="carousel slide" style="margin: auto;">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="{% static 'images/cross1.png'%}" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="{% static 'images/cross2.png'%}" class="d-block w-100" alt="...">
-
-				</div>
-				<div class="carousel-item">
-					<img src="{% static 'images/cross3.png'%}" class="d-block w-100" alt="...">
-
-				</div>
-				<div class="carousel-item">
-					<img src="{% static 'images/cross4.png'%}" class="d-block w-100" alt="...">
-
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
-	</div>
+<div class="container mt-5">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2000">
+                <img src="{% static 'images/cross1.png'%}" class="d-block w-100" alt="Slide 1">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="{% static 'images/cross2.png'%}" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="{% static 'images/cross3.png'%}" class="d-block w-100" alt="Slide 3">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="{% static 'images/cross4.png'%}" class="d-block w-100" alt="Slide 4">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
 
 
 	<!-- Start Blog Section -->
