--- a/ogapp/templates/service.html
+++ b/ogapp/templates/service.html
@@ -259,11 +259,7 @@
                     </script>
                     <style>
                         .h1s:hover {
-                            color: rgb(0, 255, 191);
-                        }
-
-                        .h1s {
-                            color: blue;
+                            color: rgb(47, 15, 205);
                         }
 
                         hr {
@@ -277,7 +273,7 @@
                     <h2>FAQs</h2>
 
                     <hr>
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service1')">1. What services does your moving
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service1')">1. What services does your moving
                         company
                         offer?
                     </h2>
@@ -288,7 +284,7 @@
                     </p>
                     <hr>
 
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service2')">2. How do I get a quote for my move?
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service2')">2. How do I get a quote for my move?
                     </h2>
                     <p id="service2" class="p">
                         You can get a free quote by filling out our online form, calling our customer service
@@ -296,7 +292,7 @@
                         scheduling an in-home estimate with one of our representatives.
                     </p>
                     <hr>
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service3')">3. Are your movers trained and insured?
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service3')">3. Are your movers trained and insured?
                     </h2>
                     <p id="service3" class="p">
                         Yes, all our movers are trained professionals who are fully licensed and insured to
@@ -305,7 +301,7 @@
                         of your belongings during the move.
                     </p>
                     <hr>
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service4')">4. Do you provide packing materials,
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service4')">4. Do you provide packing materials,
                         and
                         can I
                         pack my own items?</h2>
@@ -318,7 +314,7 @@
                     <hr>
 
 
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service5')">5. What should I do to prepare for
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service5')">5. What should I do to prepare for
                         moving
                         day?
                     </h2>
@@ -330,7 +326,7 @@
                     </p>
                     <hr>
 
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service6')">6. Do you offer storage options if my
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service6')">6. Do you offer storage options if my
                         new
                         home
                         isn’t ready yet?</h2>
@@ -340,7 +336,7 @@
                         your needs until your new home is ready for move-in.
                     </p>
                     <hr>
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service7')">7. Can you handle specialty items such
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service7')">7. Can you handle specialty items such
                         as
                         pianos,
                         antiques, or large appliances?</h2>
@@ -352,7 +348,7 @@
                     </p>
                     <hr>
 
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service8')">8. What happens if my belongings are
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service8')">8. What happens if my belongings are
                         damaged
                         during the move?</h2>
                     <p id="service8" class="p">
@@ -363,7 +359,7 @@
                     </p>
                     <hr>
 
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service9')">9. How far in advance should I schedule
+                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service9')">9. How far in advance should I schedule
                         my
                         move?
                     </h2>
@@ -374,7 +370,7 @@
                         seasons like summer. This helps ensure availability and allows time for proper planning.
                     </p>
                     <hr>
-                    <h2 class="h3 h1s" onclick="toggleParagraph('service10')">10. Do you offer moving services on
+                    <h2 class="btn h1s" onclick="toggleParagraph('service10')">10. Do you offer moving services on
                         weekends and
                         holidays?
                     </h2>
