fixed all details

--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -165,50 +165,16 @@
 
   </div>
   </div>
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-      <span class="text-muted">© 2024 Company, Inc</span>
-    </div>
-    <footer class="bg-dark text-white">
-      <style>
-          .copy {
-              padding: 20px;
-              background-color: #2E2E2E;
-              color: #FFF;
-          }
-  
-          .copy a {
-              color: #FFF;
-          }
-  
-          .copy span {
-              float: right;
-          }
-  
-          .copy span i {
-              margin-right: 20px;
-          }
-      </style>
-      <div class="copy">
-          <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.1/css/all.min.css" rel="stylesheet">
-          <div class="container">
-              <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved | Designed and Developed
-                  by
-                  Developer</a>
-  
-              <span>
-                  <a href="https://www.mandeep-developer.site/" target="_blank"><i class="far fa-user-circle"></i></a>
-                  <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-github"></i></a>
-                  <a href="https://twitter.com/Mannu_258" target="_blank"><i class="fab fa-twitter"></i></a>
-                  <a href="https://www.linkedin.com/in/mandeep-mishra-843378223/" target="_blank"><i
-                          class="fab fa-linkedin"></i></a>
-              </span>
-          </div>
-      </div>
-  </footer>
+  <footer>
+    <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved |
+      Designed and Developed
+      by
+      Developer</a>
+    <ul class="list-unstyled d-inline-flex ms-auto">
+      <li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
+      <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
+      
+    </ul>
   </footer>
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
 <script>
