--- a/ogapp/templates/privacy.html
+++ b/ogapp/templates/privacy.html
@@ -181,59 +181,19 @@
 							<script>document.write(new Date().getFullYear());</script>. OG Movers. &mdash;
 							<!-- License information: https://untree.co/license/ -->
 						</p>
+                        <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved |
+                            Designed and Developed
+                            by
+                            Developer</a>
 					</div>
 
-					<footer>
-						<ul class="list-unstyled d-inline-flex ms-auto">
-							<li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
-							<li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
-						</ul>
-						<footer class="bg-dark text-white">
-                            <style>
-                                .copy {
-                                    padding: 20px;
-                                    background-color: #2E2E2E;
-                                    color: #FFF;
-                                }
-                        
-                                .copy a {
-                                    color: #FFF;
-                                }
-                        
-                                .copy span {
-                                    float: right;
-                                }
-                        
-                                .copy span i {
-                                    margin-right: 20px;
-                                }
-                            </style>
-                            <div class="copy">
-                                <div class="container">
-                                    <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved | Designed and Developed
-                                        by
-                                        Developer</a>
-                        
-                                    <span>
-                                        <a href="https://www.mandeep-developer.site/" target="_blank"><i class="far fa-user-circle"></i></a>
-                                        <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-github"></i></a>
-                                        <a href="https://twitter.com/Mannu_258" target="_blank"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://www.linkedin.com/in/mandeep-mishra-843378223/" target="_blank"><i
-                                                class="fab fa-linkedin"></i></a>
-                                    </span>
-                                </div>
-                            </div>
-                        </footer>
-					</footer>
-
-
-
-
-				</div>
-			</div>
-
-		</div>
-	</footer>
+                    <footer>
+                        <ul class="list-unstyled d-inline-flex ms-auto">
+                            <li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
+                            <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
+                            
+                        </ul>
+                    </footer>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
