--- a/ogapp/templates/service.html
+++ b/ogapp/templates/service.html
@@ -39,6 +39,7 @@
                     </li>
                     <li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
                     <li><a class="nav-link active" href="{% url 'service' %}">Services</a></li>
+					
                     <li><a class="nav-link" href="/">About us</a></li>
                 </ul>
             </div>
@@ -99,8 +100,8 @@
                 <div class="row">
                     <style>
                         .container-3d {
-                            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-                            /* Background color for the content */
+                            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+                            padding: 0;
                         }
                     </style>
                     <div class="col-md-6">
@@ -234,155 +235,16 @@
                                 your new location, our team carefully unloads and places your specialty items
                                 according
                                 moving experience that exceeds your expectations.. to your specifications, ensuring they
-                                arrive in pristine condition..</p> <a class="btn btn-dark-outline" href="service/Service-Specialty-Item-Moving">Read More</a>
+                                arrive in pristine condition..</p> <a class="btn btn-dark-outline"
+                                href="service/Service-Specialty-Item-Moving">Read More</a>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="scriptarea">
-                <div class="faq-container">
-                    <script>
-                        function toggleParagraph(paragraphId) {
-                            const paragraph = document.getElementById(paragraphId);
-                            paragraph.style.display = paragraph.style.display === 'none' ? 'block' : 'none';
-                        }
 
-                        // Hide all paragraphs initially
-                        document.addEventListener('DOMContentLoaded', function () {
-                            const allParagraphs = document.querySelectorAll('.p');
-                            allParagraphs.forEach(paragraph => {
-                                paragraph.style.display = 'none';
-                            });
-                        });
-                    </script>
-                    <style>
-                        .h1s:hover {
-                            color: rgb(47, 15, 205);
-                        }
-
-                        hr {
-                            border: none;
-                            border-top: 3px dotted #999;
-                            color: #020202;
-                            background-color: #fff;
-                            height: 1px;
-                        }
-                    </style>
-                    <h2>FAQs</h2>
-
-                    <hr>
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service1')">1. What services does your moving
-                        company
-                        offer?
-                    </h2>
-                    <p id="service1" class="p">
-                        We offer a range of services including local and long-distance moving, packing and
-                        unpacking,
-                        furniture disassembly and reassembly, storage solutions, and more.
-                    </p>
-                    <hr>
-
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service2')">2. How do I get a quote for my move?
-                    </h2>
-                    <p id="service2" class="p">
-                        You can get a free quote by filling out our online form, calling our customer service
-                        team, or
-                        scheduling an in-home estimate with one of our representatives.
-                    </p>
-                    <hr>
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service3')">3. Are your movers trained and insured?
-                    </h2>
-                    <p id="service3" class="p">
-                        Yes, all our movers are trained professionals who are fully licensed and insured to
-                        ensure the
-                        safety
-                        of your belongings during the move.
-                    </p>
-                    <hr>
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service4')">4. Do you provide packing materials,
-                        and
-                        can I
-                        pack my own items?</h2>
-                    <p id="service4" class="p">
-                        We offer high-quality packing materials for purchase. You can choose to pack your own
-                        items or
-                        opt
-                        for our professional packing services for added convenience.
-                    </p>
-                    <hr>
-
-
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service5')">5. What should I do to prepare for
-                        moving
-                        day?
-                    </h2>
-                    <p id="service5" class="p">
-                        We recommend decluttering and organizing your belongings beforehand. Ensure all boxes
-                        are
-                        labeled
-                        clearly, and provide any special instructions to our team for fragile or valuable items.
-                    </p>
-                    <hr>
-
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service6')">6. Do you offer storage options if my
-                        new
-                        home
-                        isn’t ready yet?</h2>
-                    <p id="service6" class="p">
-                        Yes, we provide short-term and long-term storage solutions in our secure facilities to
-                        accommodate
-                        your needs until your new home is ready for move-in.
-                    </p>
-                    <hr>
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service7')">7. Can you handle specialty items such
-                        as
-                        pianos,
-                        antiques, or large appliances?</h2>
-                    <p id="service7" class="p">
-                        Absolutely, our movers are trained to handle specialty items with care. Please inform us
-                        in
-                        advance
-                        so we can make appropriate arrangements.
-                    </p>
-                    <hr>
-
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service8')">8. What happens if my belongings are
-                        damaged
-                        during the move?</h2>
-                    <p id="service8" class="p">
-                        While we take every precaution to ensure a safe move, in the rare event of damage, we
-                        have a
-                        claims
-                        process in place. Our customer service team will assist you through the process.
-                    </p>
-                    <hr>
-
-                    <h2 class="btn outline-dark h1s" onclick="toggleParagraph('service9')">9. How far in advance should I schedule
-                        my
-                        move?
-                    </h2>
-                    <p id="service9" class="p">
-                        It’s best to schedule your move as soon as you have a confirmed moving date, especially
-                        during
-                        peak
-                        seasons like summer. This helps ensure availability and allows time for proper planning.
-                    </p>
-                    <hr>
-                    <h2 class="btn h1s" onclick="toggleParagraph('service10')">10. Do you offer moving services on
-                        weekends and
-                        holidays?
-                    </h2>
-                    <p id="service10" class="p">
-                        Yes, we offer moving services seven days a week, including weekends and holidays, to
-                        accommodate
-                        your schedule and make your move as convenient as possible.
-                    </p>
-                    <hr>
-
-                </div>
-            </div>
+        </div>
 
     </main>
 
@@ -450,88 +312,47 @@
                             <script>document.write(new Date().getFullYear());</script>. OG Movers. &mdash;
                             <!-- License information: https://untree.co/license/ -->
                         </p>
+                        <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved |
+                            Designed and Developed
+                            by
+                            Developer</a>
                     </div>
-
                     <footer>
                         <ul class="list-unstyled d-inline-flex ms-auto">
                             <li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
                             <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
+
                         </ul>
-                        <footer class="bg-dark text-white">
-                            <style>
-                                .copy {
-                                    padding: 20px;
-                                    background-color: #2E2E2E;
-                                    color: #FFF;
-                                }
-                        
-                                .copy a {
-                                    color: #FFF;
-                                }
-                        
-                                .copy span {
-                                    float: right;
-                                }
-                        
-                                .copy span i {
-                                    margin-right: 20px;
-                                }
-                            </style>
-                            <div class="copy">
-                                <div class="container">
-                                    <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved | Designed and Developed
-                                        by
-                                        Developer</a>
-                        
-                                    <span>
-                                        <a href="https://www.mandeep-developer.site/" target="_blank"><i class="far fa-user-circle"></i></a>
-                                        <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-github"></i></a>
-                                        <a href="https://twitter.com/Mannu_258" target="_blank"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://www.linkedin.com/in/mandeep-mishra-843378223/" target="_blank"><i
-                                                class="fab fa-linkedin"></i></a>
-                                    </span>
-                                </div>
-                            </div>
-                        </footer>
                     </footer>
+                    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+                    <script>
+                        window.dataLayer = window.dataLayer || [];
+                        function gtag() { dataLayer.push(arguments); }
+                        gtag('js', new Date());
 
+                        gtag('config', 'AW-16485596543');
+                    </script>
 
+                    <!-- End Footer Section -->
 
+                    <!-- Bootstrap JS and its dependencies -->
+                    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-                </div>
-            </div>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                        crossorigin="anonymous"></script>
+                    <script src="{% static 'js/tiny-slider.js' %}"></script>
+                    <script src="{% static 'js/custom.js' %}"></script>
 
-        </div>
-    </footer>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'AW-16485596543');
-    </script>
-
-    <!-- End Footer Section -->
-
-    <!-- Bootstrap JS and its dependencies -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script src="{% static 'js/tiny-slider.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-
-    <!-- Google Tag Manager -->
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'AW-16485596543');
-    </script>
-    <!-- End Google Tag Manager -->
+                    <!-- Google Tag Manager -->
+                    <script>
+                        window.dataLayer = window.dataLayer || [];
+                        function gtag() { dataLayer.push(arguments); }
+                        gtag('js', new Date());
+                        gtag('config', 'AW-16485596543');
+                    </script>
+                    <!-- End Google Tag Manager -->
 </body>
 
 </html>
